--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -120,6 +120,7 @@ header.navbar-default{
 				float: right;
 			    margin-top: 3px;
     			margin-bottom: 3px;
+    			clear: both;
 			}
 
 			/* search */
