--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-1200.less
@@ -333,7 +333,7 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
 					display: block;
 					padding: .5em 0;
 				    background-color: #003399;
-				    min-height: 65px;
+				    min-height: 75px;
 				    color: white;
 				    font-weight: bold;
     				font-size: 0.9em;
@@ -341,7 +341,6 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
     				padding-right: 15px;
     				text-align: center;
     				line-height: 16px;
-    				padding-top: 20px;
     			}
     		}
     	}
